[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/NavBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/backgrounds/HomeBG.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/GUI.png" type="Texture" id=3]
[ext_resource path="res://scenes/dungeon/DungeonScreen.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 48, 32 )

[node name="DungeonScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.5
margin_top = -140.0
margin_right = 66.5

[node name="Go" type="Button" parent="VBoxContainer"]
margin_right = 133.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
disabled = true
text = "GO"

[node name="NavBar" parent="." instance=ExtResource( 1 )]

[node name="HomeBG" parent="." instance=ExtResource( 2 )]

[node name="Inventory" type="NinePatchRect" parent="."]
margin_left = 210.0
margin_top = 250.0
margin_right = 1070.0
margin_bottom = 530.0
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Inventory"]
margin_left = 10.0
margin_top = 8.0
margin_right = 855.0
margin_bottom = 193.0
rect_min_size = Vector2( 850, 265 )

[node name="GridContainer" type="GridContainer" parent="Inventory/ScrollContainer"]
margin_right = 850.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Stage" type="NinePatchRect" parent="."]
margin_left = 210.0
margin_top = 150.0
margin_right = 1070.0
margin_bottom = 230.0
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="Stage"]
margin_left = 15.0
margin_top = 15.0
margin_right = 850.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Stage 1" type="Button" parent="Stage/GridContainer"]
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
toggle_mode = true
text = "Stage 1"

[connection signal="tree_exiting" from="." to="." method="_on_DungeonScreen_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/Go" to="." method="_on_Go_pressed"]
[connection signal="toggled" from="Stage/GridContainer/Stage 1" to="." method="_on_Stage_1_toggled"]
